# explore

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/sample/: demographics_by_region.csv  market_by_region_year.csv  providers_by_region_year.csv  regions.csv  support_categories_by_region_year.csv
ndis_explorer/: __init__.py  ai.py  analysis.py  config.py  data.py  opportunity.py  streamlit_helpers.py
pages/: 1_Market_Overview.py  2_Opportunity_Finder.py  3_Regional_Explorer.py  4_Support_Categories.py  5_Demographics.py  6_AI_Insights.py  7_Data_Manager.py
scripts/: generate_sample_data.py
tests/: conftest.py  test_ai.py  test_analysis.py  test_data.py  test_opportunity.py  test_pages_smoke.py
