[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ndis-opportunity-explorer"
version = "0.1.0"
description = "Local-first tool to analyse the Australian NDIS market and find opportunities for a new disability service provider."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "streamlit>=1.39",
    "pandas>=2.1",
    "numpy>=1.26",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ai = ["openai>=1.40"]

[tool.setuptools]
packages = ["ndis_explorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
